<resources>
    <string name="app_name">DroidCafeToast</string>
    <string name="chocolate_syrup_label_text">Chocolate syrup</string>
    <string name="sprinkles_label_text">Sprinkles</string>
    <string name="crushed_nuts_label_text">Crushed nuts</string>
    <string name="cherries_label_text">Cherries</string>
    <string name="orio_cookie_crumbles_label_text">Orio cookie crumbles</string>
    <string name="show_toast_text">Show Toast</string>
</resources>
